2009-02-04  Bastien Nocera  <hadess@hadess.net>

	* data/phonemgr.glade: Don't translate the text
	in the otherportentry widget, it's overwritten anyway,
	patch from Daniele Forsi <dforsi@gmail.com> (Closes: #565357)

2009-02-04  Bastien Nocera  <hadess@hadess.net>

	* configure.in:
	* data/Makefile.am:
	* src/app.h:
	* src/main.c (main):
	* src/ui.c (idle_play_alert): Code removal galore, use
	libcanberra to play back sounds instead of GStreamer
	(Closes: #558285)

2008-12-15  Bastien Nocera  <hadess@hadess.net>

	* cut-n-paste/e-contact-entry/e-contact-entry.c:
	* cut-n-paste/e-contact-entry/e-contact-entry.h: Update from SVN

2008-07-31  Bastien Nocera  <hadess@hadess.net>

	* libgsm/Makefile.am:
	* telepathy/Makefile.am: More warnings

	* libgsm/phonemgr-listener.c (phonemgr_listener_get_data),
	(phonemgr_listener_list_all_data), (phonemgr_listener_delete_data),
	(phonemgr_listener_put_data): Fix dummy build

2008-07-31  Bastien Nocera  <hadess@hadess.net>

	* configure.in:
	* src/Makefile.am: Enable warnings, yay for time wasting!

2008-06-20  Bastien Nocera  <hadess@hadess.net>

	* libgsm/glibgsmtest.c (main): Print out an error if a delete failed
	* libgsm/phonemgr-listener.c (phonemgr_listener_get_data),
	(phonemgr_listener_delete_data): Finish implementing _get_data
	for calendar data, implement _delete_data for calendar,
	Fix retvals for deletion

2008-06-19  Bastien Nocera  <hadess@hadess.net>

	* data/phonemgr.glade: Move the delivery report checkbox below
	the message entry (Closes: #538375)

2008-06-18  Bastien Nocera  <hadess@hadess.net>

	* libgsm/phonemgr-listener.c (phonemgr_listener_parse_data_uuid),
	(phonemgr_listener_get_data), (phonemgr_listener_list_all_data),
	(phonemgr_listener_delete_data): Change the retval from
	_parse_data_uuid() to avoid having to free the memory_type
	(fixes memory leaks)
	Use the same UUID format for calendar entries, but ignore the
	folder location element
	Fix getting the list of calendar items